--- a/PBCwebsite/index.html
+++ b/PBCwebsite/index.html
@@ -24,9 +24,9 @@
 
         <h3>Gallery</h3>
         <div class="gallery">
-            <img src="pbc1.jpg" alt="Partizan Picture" height="200" width="200">
-            <img src="pbc2.jpg" alt="Partizan Picture" height="200" width="300">
-            <img src="pbc3.jpg" alt="Partizan Picture" height="200" width="300">
+            <img src="images/pbc1.jpg" alt="Partizan Picture" height="200" width="200">
+            <img src="images/pbc2.jpg" alt="Partizan Picture" height="200" width="300">
+            <img src="images/pbc3.jpg" alt="Partizan Picture" height="200" width="300">
         </div>
 
         <p>If you're interested in joining our club, <a href="register.html" target="_blank">register here</a>.</p>
