--- a/PBCwebsite/index.html
+++ b/PBCwebsite/index.html
@@ -20,8 +20,37 @@
     <section>
         <h1>Welcome to the Partizan Basketball Club</h1>
         <h2>Latest News</h2>
-        <p>Stay updated with the latest happenings at the Partizan Basketball Club. Check out our <a href="https://example.com" target="_blank">News Section</a>.</p>
-
+        <p>Stay updated with the latest happenings at the Partizan Basketball Club. Check out our <a href="https://partizan.basketball/" target="_blank">News Section</a>.</p>
+        <section>
+            <h1>Partizan Basketball Club Players</h1>
+            <table class="table table-striped mt-4">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Position</th>
+                        <th>Number</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Sterling Brown</td>
+                        <td>Guard</td>
+                        <td>12</td>
+                    </tr>
+                    <tr>
+                        <td>Tyrique Jones</td>
+                        <td>Center</td>
+                        <td>88</td>
+                    </tr>
+                    <tr>
+                        <td>Aleksej Pokuševski</td>
+                        <td>Forward</td>
+                        <td>11</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        
         <h3>Gallery</h3>
         <div class="gallery">
             <img src="images/pbc1.jpg" alt="Partizan Picture" height="200" width="200">
