--- a/PBCwebsite/contact.html
+++ b/PBCwebsite/contact.html
@@ -1,32 +1,61 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
     <header>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="register.html">Register</a></li>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Partizan Basketball Club</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+                        <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
     <!-- Contact Section -->
-    <section>
-        <h1>Contact Us</h1>
-        <p>If you have any questions, feel free to reach out to us!</p>
-        <p>Email us at <a href="mailto:amela.vatres@stu.ibu.edu.ba" target="_blank">amela.vatres@stu.ibu.edu.ba</a></p>
-        <p>Follow us on <a href="https://example.com" target="_blank">Facebook</a> or <a href="https://example.com" target="_blank">Instagram</a>.</p>
-    </section>
+    <main class="container mt-5">
+        <section class="text-center">
+            <h1 class="mb-4">Contact Us</h1>
+            <p>If you have any questions, feel free to reach out to us!</p>
+            
+            <!-- Email -->
+            <p>
+                Email us at 
+                <a href="mailto:amela.vatres@stu.ibu.edu.ba" class="text-decoration-none">amela.vatres@stu.ibu.edu.ba</a>
+            </p>
+            
+            <!-- Social Media Links -->
+            <div class="mt-4">
+                <p>Follow us on:</p>
+                <a href="https://www.facebook.com/nedim.avdukic.9?locale=hr_HR" class="btn btn-primary me-2" target="_blank">Facebook</a>
+                <a href="https://www.instagram.com/nedim_avdukic/" class="btn btn-danger" target="_blank">Instagram</a>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="bg-dark text-white text-center py-3 mt-5">
         <p>&copy; 2024 Partizan Basketball Club. All Rights Reserved.</p>
     </footer>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
