--- a/PBCwebsite/index.html
+++ b/PBCwebsite/index.html
@@ -1,69 +1,228 @@
-<!DOCTYPE html>
-<head>
-    <title>Main Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Navigation -->
-    <header>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="register.html">Register</a></li>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<!DOCTYPE html>  
+<html lang="en">  
 
-    <!-- Main Content -->
-    <section>
-        <h1>Welcome to the Partizan Basketball Club</h1>
-        <h2>Latest News</h2>
-        <p>Stay updated with the latest happenings at the Partizan Basketball Club. Check out our <a href="https://partizan.basketball/" target="_blank">News Section</a>.</p>
-        <section>
-            <h1>Partizan Basketball Club Players</h1>
-            <table class="table table-striped mt-4">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Number</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Sterling Brown</td>
-                        <td>Guard</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>Tyrique Jones</td>
-                        <td>Center</td>
-                        <td>88</td>
-                    </tr>
-                    <tr>
-                        <td>Aleksej Pokuševski</td>
-                        <td>Forward</td>
-                        <td>11</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+<head>  
+    <meta charset="UTF-8">  
+    <title>PBC Website</title>  
+    <link rel="stylesheet" href="style.css">  
+</head>  
+
+<body>  
+    <!-- Navigation -->  
+    <header>  
+        <nav class="navbar">  
+            <ul>  
+                <li><a href="basketballteamass/PBCwebsite/index.html">Home</a></li>  
+                <li><a href="basketballteamass/PBCwebsite/register.html">Register</a></li>  
+                <li><a href="basketballteamass/PBCwebsite/cart.html">Cart</a></li>  
+                <li><a href="basketballteamass/PBCwebsite/contact.html">Contact</a></li>  
+            </ul>  
+        </nav>  
+    </header>  
+
+    <!-- Main Content -->  
+    <section>  
+        <h1>Welcome to the Partizan Basketball Club</h1>  
+        <h2>Latest News</h2>  
+        <p>Stay updated with the latest happenings at the Partizan Basketball Club. Check out our <a href="https://partizan.basketball/" target="_blank">News Section</a>.</p>  
+
+        <!-- Player Table -->  
+        <section>  
+            <h1>Partizan Basketball Club Players</h1>  
+            <table class="table table-striped mt-4" id="player-table">  
+                <thead>  
+                    <tr>  
+                        <th>Name</th>  
+                        <th>Position</th>  
+                        <th>Number</th>  
+                        <th>Actions</th>  
+                    </tr>  
+                </thead>  
+                <tbody id="player-body">  
+                    <!-- Player rows will be populated here dynamically -->  
+                </tbody>  
+            </table>  
+        </section>  
+
+        <!-- Gallery Section -->  
+        <h3>Gallery</h3>  
+        <div class="gallery">  
+            <img src="images/pbc1.jpg" alt="Partizan Picture" height="200" width="200">  
+            <img src="images/pbc2.jpg" alt="Partizan Picture" height="200" width="300">  
+            <img src="images/pbc3.jpg" alt="Partizan Picture" height="200" width="300">  
+        </div>  
+
+        <p>If you're interested in joining our club, <a href="register.html" target="_blank">register here</a>.</p>  
         
-        <h3>Gallery</h3>
-        <div class="gallery">
-            <img src="images/pbc1.jpg" alt="Partizan Picture" height="200" width="200">
-            <img src="images/pbc2.jpg" alt="Partizan Picture" height="200" width="300">
-            <img src="images/pbc3.jpg" alt="Partizan Picture" height="200" width="300">
-        </div>
+        <section id="dynamic-content">  
+            <h2>Latest Updates</h2>  
+            <div id="blog-posts"></div>  
+        </section>  
+        
+        <!-- FAQ Section with Accordion Menu -->  
+        <section>  
+            <h2>FAQs</h2>  
+            <button class="accordion-button">What is the Partizan Basketball Club?</button>  
+            <div class="accordion-content">  
+                <p>The Partizan Basketball Club is a professional basketball team with a rich history and passionate fans.</p>  
+            </div>  
 
-        <p>If you're interested in joining our club, <a href="register.html" target="_blank">register here</a>.</p>
-    </section>
+            <button class="accordion-button">How can I join the club?</button>  
+            <div class="accordion-content">  
+                <p>You can join the club by filling out the <a href="register.html">registration form</a> on our website.</p>  
+            </div>  
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 Partizan Basketball Club. All Rights Reserved.</p>
-    </footer>
-</body>
+            <button class="accordion-button">Where can I buy merchandise?</button>  
+            <div class="accordion-content">  
+                <p>You can buy official Partizan Basketball Club merchandise from our <a href="cart.html">store</a>.</p>  
+            </div>  
+        </section>  
+    </section>  
+
+    <!-- Lightbox for displaying player information -->  
+    <div id="lightbox" class="lightbox">  
+        <div class="close" onclick="closeLightbox()">&times;</div>  
+        <div class="lightbox-content" id="lightbox-content"></div>  
+    </div>  
+
+    <!-- Footer -->  
+    <footer>  
+        <p>&copy; 2024 Partizan Basketball Club. All Rights Reserved.</p>  
+    </footer>  
+
+    <script>  
+        // Welcome alert on page load  
+        window.onload = function () {  
+            alert("Welcome to the Partizan Basketball Club!");  
+            loadBlogPosts(); // Call the function to load blog posts  
+            loadPlayers(); // Load players on page load  
+        };  
+
+        // Function to fetch and display blog posts  
+        function loadBlogPosts() {  
+            fetch('content.json')  
+                .then(response => {  
+                    if (!response.ok) {  
+                        throw new Error('Network response was not ok');  
+                    }  
+                    return response.json();  
+                })  
+                .then(data => {  
+                    const postsContainer = document.getElementById('blog-posts');  
+                    // Clear existing content  
+                    postsContainer.innerHTML = '';  
+                    data.blogPosts.forEach(post => {  
+                        const postElement = document.createElement('div');  
+                        postElement.classList.add('blog-post');  
+                        postElement.innerHTML = `  
+                            <h3>${post.title}</h3>  
+                            <p><strong>Date:</strong> ${post.date}</p>  
+                            <p>${post.content}</p>  
+                        `;  
+                        postsContainer.appendChild(postElement);  
+                    });  
+                })  
+                .catch(error => {  
+                    console.error('There has been a problem with your fetch operation:', error);  
+                    const postsContainer = document.getElementById('blog-posts');  
+                    postsContainer.innerHTML = '<p>Failed to load blog posts. Please try again later.</p>';  
+                });  
+        }  
+
+        // Function to load players  
+        function loadPlayers() {  
+            // Simulated data for players  
+            const players = [  
+                { name: "Sterling Brown", position: "Guard", number: 12, info: "Sterling Brown is a Guard known for his skills." },  
+                { name: "Tyrique Jones", position: "Center", number: 88, info: "Tyrique Jones is a skilled Center who can dominate the court." },  
+                { name: "Aleksej Pokuševski", position: "Forward", number: 11, info: "Aleksej Pokuševski is a versatile Forward with great potential." }  
+            ];  
+
+            const playerBody = document.getElementById('player-body');  
+            players.forEach((player, index) => {  
+                const row = document.createElement('tr');  
+                row.innerHTML = `  
+                    <td class="player" data-info="${player.info}">${player.name}</td>  
+                    <td>${player.position}</td>  
+                    <td>${player.number}</td>  
+                    <td>  
+                        <button onclick="editPlayer(${index})">Edit</button>  
+                        <button onclick="deletePlayer(${index})">Delete</button>  
+                    </td>  
+                `;  
+                playerBody.appendChild(row);  
+            });  
+        }  
+
+        // Function to handle player editing  
+        function editPlayer(index) {  
+            const newName = prompt("Enter new name:");  
+            const newPosition = prompt("Enter new position:");  
+            const newNumber = prompt("Enter new number:");  
+
+            if (newName && newPosition && newNumber) {  
+                const playerRows = document.querySelectorAll('#player-body tr');  
+                const row = playerRows[index];  
+                row.querySelector('td:first-child').innerText = newName;  
+                row.querySelector('td:nth-child(2)').innerText = newPosition;  
+                row.querySelector('td:nth-child(3)').innerText = newNumber;  
+                alert("Player updated successfully!");  
+            } else {  
+                alert("Edit operation was canceled.");  
+            }  
+        }  
+
+        // Function to handle player deletion  
+        function deletePlayer(index) {  
+            const playerRows = document.querySelectorAll('#player-body tr');  
+            if (confirm("Are you sure you want to delete this player?")) {  
+                playerRows[index].remove();  
+                alert("Player deleted successfully!");  
+            }  
+        }  
+
+        // Smooth scrolling for navigation links  
+        const navLinks = document.querySelectorAll('.navbar a');  
+        navLinks.forEach(link => {  
+            link.addEventListener('click', function (e) {  
+                e.preventDefault();  
+                const targetId = this.getAttribute('href');  
+                const targetSection = document.querySelector(targetId);  
+                if (targetSection) {  
+                    targetSection.scrollIntoView({ behavior: 'smooth' });  
+                }  
+            });  
+        });  
+
+        // Player lightbox functionality  
+        const players = document.querySelectorAll('.player');  
+        players.forEach(player => {  
+            player.addEventListener('click', () => {  
+                const playerInfo = player.getAttribute('data-info');  
+                document.getElementById('lightbox-content').innerText = playerInfo;  
+                document.getElementById('lightbox').style.display = "flex";  
+            });  
+        });  
+
+        // Close the lightbox  
+        function closeLightbox() {  
+            document.getElementById('lightbox').style.display = "none";  
+        }  
+
+        // Accordion Menu Functionality  
+        const accordionButtons = document.querySelectorAll('.accordion-button');  
+        accordionButtons.forEach(button => {  
+            button.addEventListener('click', function () {  
+                this.classList.toggle('active');  
+                const content = this.nextElementSibling;  
+                if (content.style.display === "block") {  
+                    content.style.display = "none";  
+                } else {  
+                    content.style.display = "block";  
+                }  
+            });  
+        });  
+    </script>  
+</body>  
+
 </html>
