--- a/PBCwebsite/contact.html
+++ b/PBCwebsite/contact.html
@@ -7,6 +7,21 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Custom styles for password strength indicator */
+        #password-strength {
+            font-size: 0.9rem;
+        }
+        .strength-weak {
+            color: red;
+        }
+        .strength-medium {
+            color: orange;
+        }
+        .strength-strong {
+            color: green;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation -->
@@ -31,22 +46,51 @@
 
     <!-- Contact Section -->
     <main class="container mt-5">
-        <section class="text-center">
-            <h1 class="mb-4">Contact Us</h1>
-            <p>If you have any questions, feel free to reach out to us!</p>
+        <section>
+            <h1 class="text-center mb-4">Contact Us</h1>
+            <p class="text-center">If you have any questions, feel free to reach out to us!</p>
             
-            <!-- Email -->
-            <p>
-                Email us at 
-                <a href="mailto:amela.vatres@stu.ibu.edu.ba" class="text-decoration-none">amela.vatres@stu.ibu.edu.ba</a>
-            </p>
-            
-            <!-- Social Media Links -->
-            <div class="mt-4">
-                <p>Follow us on:</p>
-                <a href="https://www.facebook.com/nedim.avdukic.9?locale=hr_HR" class="btn btn-primary me-2" target="_blank">Facebook</a>
-                <a href="https://www.instagram.com/nedim_avdukic/" class="btn btn-danger" target="_blank">Instagram</a>
-            </div>
+            <!-- Contact Form -->
+            <form id="contact-form" class="needs-validation" novalidate>
+                <!-- Name -->
+                <div class="mb-3">
+                    <label for="name" class="form-label">Full Name</label>
+                    <input type="text" id="name" class="form-control" required>
+                    <div class="invalid-feedback">Please enter your full name.</div>
+                </div>
+
+                <!-- Email -->
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email Address</label>
+                    <input type="email" id="email" class="form-control" required>
+                    <div class="invalid-feedback">Please enter a valid email address.</div>
+                </div>
+
+                <!-- Preferred Contact Date -->
+                <div class="mb-3">
+                    <label for="date" class="form-label">Preferred Contact Date</label>
+                    <input type="date" id="date" class="form-control" required>
+                    <div class="invalid-feedback">Please select a date.</div>
+                </div>
+
+                <!-- Password -->
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" id="password" class="form-control" required>
+                    <div id="password-strength" class="form-text"></div>
+                    <div class="invalid-feedback">Please enter a password that meets the criteria.</div>
+                </div>
+
+                <!-- Message -->
+                <div class="mb-3">
+                    <label for="message" class="form-label">Your Message</label>
+                    <textarea id="message" class="form-control" rows="5" required></textarea>
+                    <div class="invalid-feedback">Please enter your message.</div>
+                </div>
+
+                <!-- Submit Button -->
+                <button type="submit" class="btn btn-primary w-100">Submit</button>
+            </form>
         </section>
     </main>
 
@@ -57,5 +101,43 @@
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- JavaScript for Validation and Password Strength -->
+    <script>
+        // Password Strength Checker
+        const passwordInput = document.getElementById('password');
+        const passwordStrength = document.getElementById('password-strength');
+
+        passwordInput.addEventListener('input', () => {
+            const value = passwordInput.value;
+            let strength = '';
+            if (value.length < 6) {
+                strength = 'Weak';
+                passwordStrength.className = 'strength-weak';
+            } else if (value.match(/[A-Za-z]/) && value.match(/[0-9]/)) {
+                strength = 'Medium';
+                passwordStrength.className = 'strength-medium';
+            } else if (value.match(/[A-Za-z]/) && value.match(/[0-9]/) && value.match(/[@$!%*?&]/)) {
+                strength = 'Strong';
+                passwordStrength.className = 'strength-strong';
+            }
+            passwordStrength.textContent = `Strength: ${strength}`;
+        });
+
+        // Bootstrap Validation
+        (() => {
+            const forms = document.querySelectorAll('.needs-validation');
+
+            forms.forEach(form => {
+                form.addEventListener('submit', event => {
+                    if (!form.checkValidity()) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        })();
+    </script>
 </body>
 </html>
